crates/cli/tests/snapshots/summary_mark_tests__summary_mark_dead_code_fail_on_issues.snap
---
source: crates/cli/tests/summary_mark_tests.rs
expression: summary_lines(&output)
---
✗ 1 export ([ELAPSED])
