crates/cli/tests/snapshots/summary_mark_tests__summary_mark_health_error.snap
---
source: crates/cli/tests/summary_mark_tests.rs
expression: summary_lines(&output)
---
✗ 1 above threshold · 1 analyzed · maintainability 86.4 (good) ([ELAPSED])
